Fixed scrollbar glitch when displaying a loading spinner Added debug directory route Removed X-Mitigiation header from ApiFetch. This has to be done by the dev. Changed how form-request gets its CSRF token Updated debug routes to be part of the debug navigation group

--- a/shared/css/loading-spinner.css
+++ b/shared/css/loading-spinner.css
@@ -6,7 +6,7 @@ loading-spinner{
   transition: opacity .6s;
 }
 
-loading-spinner.mode--dashes {
+loading-spinner.mode--dashes > svg {
   animation: loadingSpinning 3s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
